--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,7 @@ header {
 	background-size: cover;
 	padding-top: 150px;
 	padding-bottom: 0;
+	background-image: url("../img1.jpg")
 }
 
 header .nav {
@@ -95,7 +96,7 @@ header h1 {
 	font-size: 400%;
 	text-align: center;
 	font-weight: 600 !important;
-	color: #353239;
+	color: white;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	margin: 0 auto 18px auto;
 	width: 100%;
@@ -437,4 +438,8 @@ footer a:focus {
 .social-links {
 	margin-top: 10px;
 	font-size: 22px;
+}
+
+#text1 {
+color: white;
 }
